# cdb

./: .gitignore  Cargo.toml  Dockerfile  LICENSE  Makefile  README.md
debian/: cdb.dirs  changelog  control  copyright  postinst  rules
debian/source/: options
doc/: cdb.1
src/: bookmarks.rs  cli.rs  commands.rs  main.rs
src/scripts/: cdb.bash-completion  cdb.sh  postrm
