[package]
name = "cdb"
version = "0.1.0"
authors = ["Nicolas Antinori <nicolas.antinori.7@gmail.com>"]
edition = "2018"

[dependencies]
home = "0.5"
structopt = "0.3"
serde_json = "1.0"

[profile.release]
opt-level = 'z'     # Optimize for size.
lto = true          # Enable Link Time Optimization
codegen-units = 1   # Reduce number of codegen units to increase optimizations.
panic = 'abort'     # Abort on panic
